--- a/TestProject/Base.lproj/Main.storyboard
+++ b/TestProject/Base.lproj/Main.storyboard
@@ -115,7 +115,6 @@
         <!--View Controller-->
         <scene sceneID="5j5-yv-0W9">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="seV-EG-OMf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="PHH-PT-i97" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Je6-eP-NML">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -147,6 +146,7 @@
                         <viewLayoutGuide key="safeArea" id="xBR-S8-A2b"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="seV-EG-OMf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3130.4000000000001" y="917.99100449775119"/>
         </scene>
@@ -158,32 +158,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="EKl-hZ-v4y">
-                                <rect key="frame" x="0.0" y="20" width="375" height="652"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Wj-ck-bvl">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="326"/>
-                                    </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rCa-bJ-XMR">
-                                        <rect key="frame" x="0.0" y="326" width="375" height="326"/>
-                                    </imageView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="4Wj-ck-bvl" firstAttribute="top" secondItem="EKl-hZ-v4y" secondAttribute="top" id="KWW-9p-R3v"/>
-                                    <constraint firstItem="rCa-bJ-XMR" firstAttribute="top" secondItem="4Wj-ck-bvl" secondAttribute="bottom" id="QA3-Ir-N34"/>
-                                    <constraint firstItem="4Wj-ck-bvl" firstAttribute="height" secondItem="rCa-bJ-XMR" secondAttribute="height" id="Wc0-Fx-fdq"/>
-                                    <constraint firstAttribute="trailing" secondItem="4Wj-ck-bvl" secondAttribute="trailing" id="b8M-bT-8bj"/>
-                                    <constraint firstItem="4Wj-ck-bvl" firstAttribute="leading" secondItem="EKl-hZ-v4y" secondAttribute="leading" id="bRg-0b-dlE"/>
-                                    <constraint firstItem="4Wj-ck-bvl" firstAttribute="width" secondItem="rCa-bJ-XMR" secondAttribute="width" id="lWv-J3-Ra6"/>
-                                </constraints>
-                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4Wj-ck-bvl">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="333.5"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottomMargin" secondItem="EKl-hZ-v4y" secondAttribute="bottom" constant="-5" id="Qvl-Re-CVk"/>
-                            <constraint firstItem="EKl-hZ-v4y" firstAttribute="top" secondItem="7MM-8o-TLZ" secondAttribute="top" id="dZY-yD-Kjv"/>
-                            <constraint firstAttribute="trailing" secondItem="EKl-hZ-v4y" secondAttribute="trailing" id="sMR-MA-1hL"/>
-                            <constraint firstItem="EKl-hZ-v4y" firstAttribute="leading" secondItem="RaK-s5-jHt" secondAttribute="leading" id="u0k-zP-7Lm"/>
+                            <constraint firstItem="4Wj-ck-bvl" firstAttribute="height" secondItem="RaK-s5-jHt" secondAttribute="height" multiplier="1:2" id="2ot-pl-7Fs"/>
+                            <constraint firstItem="4Wj-ck-bvl" firstAttribute="leading" secondItem="7MM-8o-TLZ" secondAttribute="leading" id="6o2-2l-8UE"/>
+                            <constraint firstItem="4Wj-ck-bvl" firstAttribute="top" secondItem="RaK-s5-jHt" secondAttribute="top" id="EsQ-PB-bbm"/>
+                            <constraint firstItem="4Wj-ck-bvl" firstAttribute="trailing" secondItem="7MM-8o-TLZ" secondAttribute="trailing" id="Kr3-xS-oLJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7MM-8o-TLZ"/>
                     </view>
